[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "systools"
version = "0.1.0"
description = "System utilities"
requires-python = ">=3.9"
dependencies = [
    "torch",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[tool.hatch.build.targets.wheel]
packages = ["src/systools"]

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = [
    "ignore::pydantic.warnings.PydanticDeprecatedSince20",
    "ignore::DeprecationWarning:pytz",
]
